src/main/java/com/example/backend/error/AccountNotFoundException.java
package com.example.backend.error;


public class AccountNotFoundException extends RuntimeException {
    public AccountNotFoundException(String message) {
        super(message);
    }
}
